// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Accounts {
  id                             String         @id @default(uuid())
  name                           String
  email                          String         @unique
  companyId                      String?        @map("company_id")
  emailValidationToken           String?        @map("email_validation_token")
  emailValidationTokenExpiration DateTime?      @map("email_validation_token_expiration")
  hashedPassword                 String?        @map("hashed_password")
  role                           Role           @default(CLIENT)
  isConfirmed                    Boolean        @default(false) @map("is_confirmed")
  company                        Companies?     @relation(fields: [companyId], references: [id])
  createdAt                      DateTime       @default(now()) @map("created_at")
  updatedAt                      DateTime       @default(now()) @map("updated_at")
  reservations                   Reservations[]

  @@map("accounts")
}

model Companies {
  id                       String         @id @default(uuid())
  name                     String
  reservationPrice         Int            @map("reservation_price")
  createdAt                DateTime       @default(now()) @map("created_at")
  updatedAt                DateTime       @default(now()) @map("updated_at")
  accounts                 Accounts[]
  courts                   Courts[]
  reservations             Reservations[]
  serviceHours             ServiceHours[]
  reservationTimeInMinutes Int            @map("reservation_time_in_minutes")

  @@map("companies")
}

model ServiceHours {
  id        String    @id @default(uuid())
  weekday   Int
  startTime String    @map("start_time")
  endTime   String    @map("end_time")
  company   Companies @relation(fields: [companyId], references: [id])
  companyId String

  @@map("service_hours")
}

model Courts {
  id        String    @id @default(uuid())
  name      String
  companyId String    @map("company_id")
  isDeleted Boolean   @default(false) @map("is_deleted")
  company   Companies @relation(fields: [companyId], references: [id])
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @default(now()) @map("updated_at")

  @@map("courts")
}

model Reservations {
  id          String            @id @default(uuid())
  price       Int
  status      ReservationStatus @default(AWAITING_PAYMENT)
  date        DateTime
  startTime   String
  endTime     String
  description String?
  accountId   String            @map("account_id")
  account     Accounts          @relation(fields: [accountId], references: [id])
  createdAt   DateTime          @default(now()) @map("created_at")
  updatedAt   DateTime          @default(now()) @map("updated_at")
  company     Companies         @relation(fields: [companyId], references: [id])
  companyId   String

  @@map("reservations")
}

model Errors {
  id        String   @id @default(uuid())
  stack     String
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @map("updated_at")

  @@map("errors")
}

enum Role {
  CLIENT
  GENERAL_ADMIN
  COMPANY_ADMIN
  EMPLOYEE

  @@map("role")
}

enum ReservationStatus {
  PAID
  AWAITING_PAYMENT
  PENDING

  @@map("reservation_status")
}
