//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table accounts {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  companyId String
  emailValidationToken String
  emailValidationTokenExpiration DateTime
  hashedPassword String
  role Role [not null, default: 'CLIENT']
  isConfirmed Boolean [not null, default: false]
  company companies
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  reservations reservations [not null]
}

Table companies {
  id String [pk]
  name String [not null]
  reservationPrice Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  accounts accounts [not null]
  courts courts [not null]
  reservations reservations [not null]
  serviceHours service_hours [not null]
  reservationTimeInMinutes Int [not null]
}

Table service_hours {
  id String [pk]
  weekday Int [not null]
  startTime String [not null]
  endTime String [not null]
  company companies [not null]
  companyId String [not null]
}

Table courts {
  id String [pk]
  name String [not null]
  companyId String [not null]
  isDeleted Boolean [not null, default: false]
  company companies [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table reservations {
  id String [pk]
  price Int [not null]
  status ReservationStatus [not null, default: 'AWAITING_PAYMENT']
  date DateTime [not null]
  startTime String [not null]
  endTime String [not null]
  description String
  accountId String [not null]
  account accounts [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  company companies [not null]
  companyId String [not null]
}

Table errors {
  id String [pk]
  stack String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Enum Role {
  CLIENT
  GENERAL_ADMIN
  COMPANY_ADMIN
  EMPLOYEE
}

Enum ReservationStatus {
  PAID
  AWAITING_PAYMENT
  PENDING
}

Ref: accounts.companyId > companies.id

Ref: service_hours.companyId > companies.id

Ref: courts.companyId > companies.id

Ref: reservations.accountId > accounts.id

Ref: reservations.companyId > companies.id